--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,23 @@
 [package]
 name = "aliyunsdk-rs"
-version = "0.1.1"
+version = "1.0.0"
 edition = "2021"
 authors = ["Peng <397192202@qq.com>"]
 description = "Aliyun sdk for rust, based on async-std."
 repository = "https://github.com/peng0208/aliyunsdk-rs"
 license = "MIT"
-keywords = ["sdk", "aliyun", "async-std"]
+keywords = ["sdk", "tokio", "aliyun", "aliyun-sdk", "alibaba-cloud-sdk"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = {version= "1.12.0" , features=["attributes"]}
 base64 = "0.21.2"
+bytes = "1.10.1"
 chrono = "0.4.26"
 http-types = "2.12.0"
+reqwest = {version = "0.12.23", features = ["json"]}
 rust-crypto = "0.2.36"
 serde_json = "1.0.102"
-surf = "2.3.2"
+tokio = { version = "1.47.1", features = ["full"]}
 url = "2.4.0"
 
